# vk-comment-deleter-rs

./: Cargo.toml  README.md
src/: cli.rs  comment_reading.rs  main.rs  vk_api.rs
