[package]
name = "vk-remove-comments"
version = "0.1.0"
authors = ["Nikolay Chechulin <nchechulin@aol.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dialoguer = "0.10.3"
regex = "1.7.1"
encoding_rs = "0.8.32"
encoding_rs_io = "0.1.7"
reqwest = "0.11.15"
tokio = { version = "1.25.0", features = ["full"] }
pbr = "1.0.4"
